# mozc-ports

./: README.md
chinese/fcitx/: Makefile
devel/bazel7/: Makefile  distinfo
devel/bazel8/: Makefile  distinfo
devel/bazel8/files/: patch-src_main_native_unix__jni__bsd.cc  patch-tools_cpp_modules__tools_BUILD
devel/bazel9/: Makefile  distinfo
japanese/fcitx-mozc/: Makefile
japanese/fcitx5-mozc/: Makefile
japanese/mozc-el/: pkg-message
japanese/mozc-server/: ?mode=json  Makefile  Makefile.MASTER_SITES  Makefile.MASTER_SITES.bak  Makefile.jawiki_latest_pages_articles_multistream_index  distinfo  pkg-message
japanese/mozc-server/files/: extra-patch-merge_dictionaries.py  extra-patch-rules__go+_go_private_sdk.bzl  extra-patch-rules_buf+_buf_internal_toolchain.bzl  extra-patch-rules_buf~_buf_internal_toolchain.bzl  extra-patch-rules_rust+_rust_platform_triple.bzl  extra-patch-src_MODULE.bazel  extra-patch-src_data_symbol_symbol.tsv  extra-patch-src_unix_emacs_mozc.el  extra-patch-src_unix_uim_BUILD.bazel  mozc.in  patch-src_MODULE.bazel  patch-src_base_init__mozc.cc  patch-src_base_system__util.cc  patch-src_bazel_pkg__config__repository.bzl  patch-src_ipc_BUILD.bazel  patch-src_ipc_ipc__path__manager.cc  patch-src_ipc_unix__ipc.cc  patch-src_unix_emacs_mozc.el
japanese/uim-mozc/: Makefile
