--- src/MODULE.bazel.orig	2025-07-18 17:09:27 UTC
+++ src/MODULE.bazel
@@ -185,11 +185,13 @@ pkg_config_repository(
 )
 
 # Fcitx
-new_local_repository(
+pkg_config_repository(
     name = "fcitx",
-    build_file = "BUILD.fcitx.bazel",
-    # This path should be updated per the environment.
-    path = "/usr",  # For Debian
+    packages = [
+      "fcitx",
+      "fcitx-config",
+      "fcitx-utils",
+    ],
 )
 
 # Fcitx 5
@@ -208,6 +210,7 @@ pkg_config_repository(
         "Qt6Core",
         "Qt6Gui",
         "Qt6Widgets",
+        "libglvnd",
     ],
 )
 
@@ -340,12 +343,11 @@ http_archive(
 )
 
 # Japanese Usage Dictionary (2025-01-25)
-JA_USAGE_DICT_TAG = "2025-01-25"
-http_archive(
+#JA_USAGE_DICT_TAG = "2025-01-25"
+new_local_repository(
     name = "ja_usage_dict",
-    sha256 = "140f24f71f7d78d5eb5b93a9c079f44f23728dca5ab16bf857fe8a3fa1bf20ed",
-    strip_prefix = "japanese-usage-dictionary-%s" % JA_USAGE_DICT_TAG,
-    url = "https://github.com/hiroyuki-komatsu/japanese-usage-dictionary/archive/refs/tags/%s.zip" % JA_USAGE_DICT_TAG,
+    build_file = "@//bazel:BUILD.ja_usage_dict.bazel",
+    path = "third_party/japanese_usage_dictionary",
 )
 
 # Zip code (2025-03-08, 6ece210081fb73d0ea4a5ea8e13ac9584d03fd76)
@@ -354,16 +356,30 @@ http_archive(
 # The data files are mirror of the following files.
 # * https://www.post.japanpost.jp/zipcode/dl/kogaki/zip/ken_all.zip
 # * https://www.post.japanpost.jp/zipcode/dl/jigyosyo/zip/jigyosyo.zip
-http_archive(
+new_local_repository(
     name = "zip_code_ken_all",
     build_file_content = "exports_files([\"KEN_ALL.CSV\"])",
-    sha256 = "296cfa57f2012c0226afbc64e9e8575fc36285d2fa31d725a176548cd173b3df",
-    url = "https://github.com/hiroyuki-komatsu/japanpost_zipcode/raw/6ece210081fb73d0ea4a5ea8e13ac9584d03fd76/ken_all.zip",
+    path = "third_party",
 )
 
-http_archive(
+new_local_repository(
     name = "zip_code_jigyosyo",
     build_file_content = "exports_files([\"JIGYOSYO.CSV\"])",
-    sha256 = "1c56e79ff4c7f709778e0bf4dfbffdf939efd170845feccae986d22cf4373988",
-    url = "https://github.com/hiroyuki-komatsu/japanpost_zipcode/raw/6ece210081fb73d0ea4a5ea8e13ac9584d03fd76/jigyosyo.zip",
+    path = "third_party",
 )
+
+register_toolchains("@bazel_tools//tools/python:autodetecting_toolchain")
+
+#single_version_override(
+#    module_name = "rules_buf",
+#    patches = [
+#      "//:rules_buf.patch",
+#    ],
+#)
+
+#single_version_override(
+#    module_name = "rules_rust",
+#    patches = [
+#      "//:rules_rust.patch",
+#    ],
+#)
