--- src/MODULE.bazel.orig	2025-07-23 14:09:24 UTC
+++ src/MODULE.bazel
@@ -192,11 +192,13 @@ pkg_config_repository(
 )
 
 # Fcitx
-new_local_repository(
+pkg_config_repository(
     name = "fcitx",
-    build_file = "BUILD.fcitx.bazel",
-    # This path should be updated per the environment.
-    path = "/usr",  # For Debian
+    packages = [
+      "fcitx",
+      "fcitx-config",
+      "fcitx-utils",
+    ],
 )
 
 # Fcitx 5
@@ -215,6 +217,7 @@ pkg_config_repository(
         "Qt6Core",
         "Qt6Gui",
         "Qt6Widgets",
+        "libglvnd",
     ],
 )
 
@@ -347,13 +350,12 @@ http_archive(
 )
 
 # Japanese Usage Dictionary (2025-01-25)
-JA_USAGE_DICT_TAG = "2025-01-25"
+#JA_USAGE_DICT_TAG = "2025-01-25"
 
-http_archive(
+new_local_repository(
     name = "ja_usage_dict",
-    sha256 = "140f24f71f7d78d5eb5b93a9c079f44f23728dca5ab16bf857fe8a3fa1bf20ed",
-    strip_prefix = "japanese-usage-dictionary-%s" % JA_USAGE_DICT_TAG,
-    url = "https://github.com/hiroyuki-komatsu/japanese-usage-dictionary/archive/refs/tags/%s.zip" % JA_USAGE_DICT_TAG,
+    build_file = "@//bazel:BUILD.ja_usage_dict.bazel",
+    path = "third_party/japanese_usage_dictionary",
 )
 
 # Zip code (2025-06-28, 21c6fb3cbc125e4408a8c2715beb1fbfcf03a442)
@@ -362,16 +364,30 @@ http_archive(
 # The data files are mirror of the following files.
 # * https://www.post.japanpost.jp/zipcode/dl/kogaki/zip/ken_all.zip
 # * https://www.post.japanpost.jp/zipcode/dl/jigyosyo/zip/jigyosyo.zip
-http_archive(
+new_local_repository(
     name = "zip_code_ken_all",
     build_file_content = "exports_files([\"KEN_ALL.CSV\"])",
-    sha256 = "9cd7a9235d1869a94f4019a201d61172a0fc633f1957922c3ec23ac7bf75becf",
-    url = "https://github.com/hiroyuki-komatsu/japanpost_zipcode/raw/21c6fb3cbc125e4408a8c2715beb1fbfcf03a442/ken_all.zip",
+    path = "third_party",
 )
 
-http_archive(
+new_local_repository(
     name = "zip_code_jigyosyo",
     build_file_content = "exports_files([\"JIGYOSYO.CSV\"])",
-    sha256 = "f390501cbfe143921a939884178e5b33ca246181803d814e5f58676c19e91a6c",
-    url = "https://github.com/hiroyuki-komatsu/japanpost_zipcode/raw/21c6fb3cbc125e4408a8c2715beb1fbfcf03a442/jigyosyo.zip",
+    path = "third_party",
 )
+
+register_toolchains("@bazel_tools//tools/python:autodetecting_toolchain")
+
+#single_version_override(
+#    module_name = "rules_buf",
+#    patches = [
+#      "//:rules_buf.patch",
+#    ],
+#)
+
+#single_version_override(
+#    module_name = "rules_rust",
+#    patches = [
+#      "//:rules_rust.patch",
+#    ],
+#)
