--- src/MODULE.bazel.orig	2025-09-02 11:09:32 UTC
+++ src/MODULE.bazel
@@ -193,11 +193,13 @@ pkg_config_repository(
 )
 
 # Fcitx
-new_local_repository(
+pkg_config_repository(
     name = "fcitx",
-    build_file = "BUILD.fcitx.bazel",
-    # This path should be updated per the environment.
-    path = "/usr",  # For Debian
+    packages = [
+      "fcitx",
+      "fcitx-config",
+      "fcitx-utils",
+    ],
 )
 
 # Fcitx 5
@@ -216,6 +218,7 @@ pkg_config_repository(
         "Qt6Core",
         "Qt6Gui",
         "Qt6Widgets",
+        "libglvnd",
     ],
 )
 
@@ -348,13 +351,12 @@ http_archive(
 )
 
 # Japanese Usage Dictionary (2025-01-25)
-JA_USAGE_DICT_TAG = "2025-01-25"
+#JA_USAGE_DICT_TAG = "2025-01-25"
 
-http_archive(
+new_local_repository(
     name = "ja_usage_dict",
-    sha256 = "140f24f71f7d78d5eb5b93a9c079f44f23728dca5ab16bf857fe8a3fa1bf20ed",
-    strip_prefix = "japanese-usage-dictionary-%s" % JA_USAGE_DICT_TAG,
-    url = "https://github.com/hiroyuki-komatsu/japanese-usage-dictionary/archive/refs/tags/%s.zip" % JA_USAGE_DICT_TAG,
+    build_file = "@//bazel:BUILD.ja_usage_dict.bazel",
+    path = "third_party/japanese_usage_dictionary",
 )
 
 # Zip code (2025-08-30, 33524763837473258e7ba2f14b17fc3a70519831)
@@ -363,16 +365,30 @@ http_archive(
 # The data files are mirror of the following files.
 # * https://www.post.japanpost.jp/zipcode/dl/jigyosyo/zip/jigyosyo.zip
 # * https://www.post.japanpost.jp/zipcode/dl/kogaki/zip/ken_all.zip
-http_archive(
+new_local_repository(
     name = "zip_code_jigyosyo",
     build_file_content = "exports_files([\"JIGYOSYO.CSV\"])",
-    sha256 = "8b0c5e9f720dba6d600a2683a260b8f04d14f463d45d10893e7ba08424405a1e",
-    url = "https://github.com/hiroyuki-komatsu/japanpost_zipcode/raw/33524763837473258e7ba2f14b17fc3a70519831/jigyosyo.zip",
+    path = "third_party",
 )
 
-http_archive(
+new_local_repository(
     name = "zip_code_ken_all",
     build_file_content = "exports_files([\"KEN_ALL.CSV\"])",
-    sha256 = "47a3e63e1379f707af9c49df5c4fa0534332173c73c61f93d14555673bed7599",
-    url = "https://github.com/hiroyuki-komatsu/japanpost_zipcode/raw/33524763837473258e7ba2f14b17fc3a70519831/ken_all.zip",
+    path = "third_party",
 )
+
+register_toolchains("@bazel_tools//tools/python:autodetecting_toolchain")
+
+#single_version_override(
+#    module_name = "rules_buf",
+#    patches = [
+#      "//:rules_buf.patch",
+#    ],
+#)
+
+#single_version_override(
+#    module_name = "rules_rust",
+#    patches = [
+#      "//:rules_rust.patch",
+#    ],
+#)
